feat: Add `essential-cli` crate with commands to assist app dev
This tool hosts three very minimal commands to aid in app dev:

- `generate-keys` generates a secp256k1 keypair and outputs it as JSON.
- `intent-addresses` takes a path to an intent set in JSON and returns
  their intent addresses in a JSON list.
- `sign-intent-set` takes a private key and a path to an intent set in
  JSON and returns the signed intent set in JSON.

In the long run, this tool should be removed in favour of a more
comprehensive essential tooling suite.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ concurrency:
       matrix:
         os: [ubuntu-latest, macos-latest]
         command: [
-            "develop --print-build-logs --no-update-lock-file",
+            "shell --print-build-logs --no-update-lock-file",
           ]
     runs-on: ${{ matrix.os }}
     steps:
