--- a/crates/essential-cli/Cargo.toml
+++ b/crates/essential-cli/Cargo.toml
@@ -8,9 +8,9 @@ name = "essential"
 path = "src/main.rs"
 
 [dependencies]
-clap = { workspace = true }
-essential-hash = { workspace = true }
-essential-sign = { workspace = true }
-essential-types = { workspace = true }
-secp256k1 = { workspace = true }
-serde_json = { workspace = true }
+clap = { versio = "4", features = ["derive"] }
+essential-hash = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
+essential-sign = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
+essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
+secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
+serde_json = "1"
