--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,18 @@ jobs:
   # Check the nix code is formatted.
   nix-fmt-check:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: "write"
+      contents: "read"
     steps:
     - uses: actions/checkout@v3
+    - uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: |
+          ${{ secrets.SSH_KEY_BASE }}
+          ${{ secrets.SSH_KEY_PINT }}
+          ${{ secrets.SSH_KEY_PINTNIX }}
+          ${{ secrets.SSH_KEY_SERVER }}
     - uses: DeterminateSystems/nix-installer-action@v10
     - uses: DeterminateSystems/magic-nix-cache-action@v4
     - run: nix fmt -- --check ./
@@ -31,6 +41,9 @@ jobs:
             "shell --print-build-logs --no-update-lock-file",
           ]
     runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: "write"
+      contents: "read"
     steps:
       - uses: actions/checkout@v3
       - uses: webfactory/ssh-agent@v0.9.0
