--- a/crates/essential-rest-client/Cargo.toml
+++ b/crates/essential-rest-client/Cargo.toml
@@ -10,5 +10,6 @@ clap = { workspace = true }
 essential-server-types = { workspace = true }
 essential-types = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 tokio = { workspace = true }
