--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ essential-server-types = { git = "ssh://git@github.com/essential-contributions/e
 essential-sign = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 reqwest = "0.12.4"
-secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
+secp256k1 = { version = "0.29" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
