--- a/crates/essential-cli/Cargo.toml
+++ b/crates/essential-cli/Cargo.toml
@@ -12,5 +12,5 @@ clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-sign = { workspace = true }
 essential-types = { workspace = true }
-secp256k1 = { workspace = true }
+secp256k1 = { workspace = true, features = ["rand-std"] }
 serde_json = { workspace = true }
