--- a/apps/nft/front_end/Cargo.toml
+++ b/apps/nft/front_end/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2021"
 anyhow = { workspace = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
+essential-sign.workspace = true
 essential-signer = { workspace = true }
-essential-types = { workspace = true }
+essential-types.workspace = true
 essential-wallet = { workspace = true }
+hex = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+
+[dev-dependencies]
+essential-wallet = { workspace = true, features = ["test-utils"]}
