--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ essential-sign = { git = "ssh://git@github.com/essential-contributions/essential
 essential-signer = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
 essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 essential-wallet = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
+hex = "0.4.3"
 reqwest = "0.12.4"
 rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
