--- a/apps/nft/front_end/Cargo.toml
+++ b/apps/nft/front_end/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-sign.workspace = true
@@ -12,6 +13,7 @@ essential-signer = { workspace = true }
 essential-types.workspace = true
 essential-wallet = { workspace = true }
 hex = { workspace = true }
+rpassword.workspace = true
 serde_json = { workspace = true }
 tokio = { workspace = true }
 
