--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ essential-types = { git = "ssh://git@github.com/essential-contributions/essentia
 essential-wallet = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
 hex = "0.4.3"
 reqwest = "0.12.4"
+rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
