--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,14 @@ clap = { version = "4.5.4", features = ["derive"] }
 essential-hash = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 essential-server-types = { git = "ssh://git@github.com/essential-contributions/essential-server.git" }
 essential-sign = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
+essential-signer = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
 essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
+essential-wallet = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
 reqwest = "0.12.4"
+rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
+
+essential-rest-client = { path = "crates/essential-rest-client" }
