--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -9,6 +9,8 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = { workspace = true }
+app-utils = { workspace = true }
+clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-server-types = { workspace = true }
@@ -16,6 +18,7 @@ essential-sign = { workspace = true }
 essential-signer = { workspace = true }
 essential-types = { workspace = true }
 essential-wallet = { workspace = true }
+rpassword = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 
