--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "apps/counter/app",
     "apps/nft/front_end",
     "apps/token/app",
+    "apps/utils",
     "crates/*",
 ]
 resolver = "2"
@@ -25,5 +26,6 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
 
+app-utils = { path = "apps/utils" }
 essential-deploy-contract = { path = "crates/essential-deploy-contract" }
 essential-rest-client = { path = "crates/essential-rest-client" }
