feat: more app_utils and remaining CLI for the token app

--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-sign = { workspace = true }
 essential-signer = { workspace = true }
