--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
           ${{ secrets.SSH_KEY_PINT }}
           ${{ secrets.SSH_KEY_PINTNIX }}
           ${{ secrets.SSH_KEY_SERVER }}
+          ${{ secrets.SSH_KEY_WALLET }}
     - uses: DeterminateSystems/nix-installer-action@v10
     - uses: DeterminateSystems/magic-nix-cache-action@v4
     - run: nix fmt -- --check ./
@@ -53,6 +54,7 @@ jobs:
             ${{ secrets.SSH_KEY_PINT }}
             ${{ secrets.SSH_KEY_PINTNIX }}
             ${{ secrets.SSH_KEY_SERVER }}
+            ${{ secrets.SSH_KEY_WALLET }}
       - uses: DeterminateSystems/nix-installer-action@v10
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: nix ${{ matrix.command }}
@@ -78,6 +80,7 @@ jobs:
             ${{ secrets.SSH_KEY_PINT }}
             ${{ secrets.SSH_KEY_PINTNIX }}
             ${{ secrets.SSH_KEY_SERVER }}
+            ${{ secrets.SSH_KEY_WALLET }}
       - uses: DeterminateSystems/nix-installer-action@v10
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: ${{ matrix.command }}
