--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -18,6 +18,7 @@ essential-sign = { workspace = true }
 essential-signer = { workspace = true }
 essential-types = { workspace = true }
 essential-wallet = { workspace = true }
+hex = { workspace = true }
 rpassword = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
