--- a/crates/essential-dry-run/Cargo.toml
+++ b/crates/essential-dry-run/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 anyhow = { workspace = true }
 clap = { workspace = true }
 essential-rest-client = { workspace = true }
+essential-server-types = { workspace = true }
 essential-types = { workspace = true }
-essential-wallet = { workspace = true }
 serde_json = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
-rpassword = { workspace = true }
 tokio = { workspace = true }
