--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
 
+essential-read = { path = "crates/essential-read" }
 essential-rest-client = { path = "crates/essential-rest-client" }
