refactor: use `essential-read` tool, expect path for solution instead of string

--- a/crates/essential-dry-run/Cargo.toml
+++ b/crates/essential-dry-run/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
+essential-read = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-server-types = { workspace = true }
 essential-types = { workspace = true }
