--- a/crates/essential-rest-client/Cargo.toml
+++ b/crates/essential-rest-client/Cargo.toml
@@ -9,6 +9,7 @@ base64 = { workspace = true }
 clap = { workspace = true }
 essential-server-types = { workspace = true }
 essential-types = { workspace = true }
+hex.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
