--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [workspace]
-members = [
-    "crates/*"
-]
+members = ["apps/counter/app", "crates/*"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -14,6 +12,7 @@ essential-sign = { git = "ssh://git@github.com/essential-contributions/essential
 essential-signer = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
 essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 essential-wallet = { git = "ssh://git@github.com/essential-contributions/essential-wallet.git" }
+hex = "0.4.3"
 reqwest = "0.12.4"
 rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
@@ -21,4 +20,5 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
 
+essential-deploy-contract = { path = "crates/essential-deploy-contract" }
 essential-rest-client = { path = "crates/essential-rest-client" }
