--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
+edition = "2021"
 name = "token"
 version = "0.1.0"
-edition = "2021"
 
 [[bin]]
 name = "app"
@@ -24,5 +24,5 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
-essential-debugger.workspace = true
-essential-wallet = { workspace = true, features = ["test-utils"]}
+app-utils = { workspace = true, features = ["test-utils"] }
+essential-wallet = { workspace = true, features = ["test-utils"] }
