--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           ${{ secrets.SSH_KEY_PINTNIX }}
           ${{ secrets.SSH_KEY_SERVER }}
           ${{ secrets.SSH_KEY_WALLET }}
+          ${{ secrets.SSH_KEY_DEBUGGER }}
     - uses: DeterminateSystems/nix-installer-action@v10
     - uses: DeterminateSystems/magic-nix-cache-action@v4
     - run: nix fmt -- --check ./
@@ -55,6 +56,7 @@ jobs:
             ${{ secrets.SSH_KEY_PINTNIX }}
             ${{ secrets.SSH_KEY_SERVER }}
             ${{ secrets.SSH_KEY_WALLET }}
+            ${{ secrets.SSH_KEY_DEBUGGER }}
       - uses: DeterminateSystems/nix-installer-action@v10
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: nix ${{ matrix.command }}
@@ -81,6 +83,7 @@ jobs:
             ${{ secrets.SSH_KEY_PINTNIX }}
             ${{ secrets.SSH_KEY_SERVER }}
             ${{ secrets.SSH_KEY_WALLET }}
+            ${{ secrets.SSH_KEY_DEBUGGER }}
       - uses: DeterminateSystems/nix-installer-action@v10
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: ${{ matrix.command }}
