feat: add nft and token app (#19)
* feat: add nft app

* feat: transfer to bob

* feat: swap with contract

* fix: add nonce to sig

* feat: add cli

* feat: add input types and encoding

* feat: clean up intents

* comments

* feat: token mint and transfer

* feat: burn intent

* test: mint twice

* feat: token name

* feat: app_utils and partial CLI for the token app

* feat: more app_utils and remaining CLI for the token app

* fix: add new line

* fix: move replace hashes back to ntf as they are specific to nft

* fix: change nft to int

* feat: refactor nft to use better auth

* feat: add auth to token

* fix: change auth to be secure

* Add comments

* feat: make TransferWith and hardcode static private key

* feat: refactor into builders

* fix: constracts and missing handle_errors

* name changes

* start adding pint projects

* feat: refactor pint programs into packages

* fix: token test passing

* fix: add multiple versions of macro

* feat: add debugging

* all tests passing

* add debugger key

---------

Co-authored-by: Bikem <bengisuozaydin@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,18 @@
 [workspace]
-members = ["apps/counter/app", "crates/*"]
+members = [
+    "apps/counter/app",
+    "apps/nft/front_end",
+    "apps/token/app",
+    "apps/utils",
+    "crates/*",
+]
 resolver = "2"
 
 [workspace.dependencies]
 anyhow = "1.0.80"
 base64 = "0.22.0"
 clap = { version = "4.5.4", features = ["derive"] }
+essential-debugger = { git = "ssh://git@github.com/essential-contributions/essential-debugger.git" }
 essential-hash = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
 essential-server-types = { git = "ssh://git@github.com/essential-contributions/essential-server.git" }
 essential-sign = { git = "ssh://git@github.com/essential-contributions/essential-base.git" }
@@ -20,5 +27,6 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
 
+app-utils = { path = "apps/utils" }
 essential-deploy-contract = { path = "crates/essential-deploy-contract" }
 essential-rest-client = { path = "crates/essential-rest-client" }
