--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -13,4 +13,5 @@ serde_json.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
+app-utils = { workspace = true, features = ["test-utils"] }
 essential-wallet = { workspace = true, features = ["test-utils"] }
