--- a/crates/essential-rest-client/Cargo.toml
+++ b/crates/essential-rest-client/Cargo.toml
@@ -10,7 +10,7 @@ clap = { workspace = true }
 essential-server-types = { workspace = true }
 essential-types = { workspace = true }
 hex.workspace = true
-reqwest = { workspace = true, features = ["json"] }
+reqwest = { workspace = true, features = ["json", "native-tls-alpn"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
