feat: finish intallation chapter

--- a/docs/getting-started/book.toml
+++ b/docs/getting-started/book.toml
@@ -3,7 +3,7 @@ authors = ["Essential"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Essential App Building"
+title = "Getting Started with Essential Applications"
 
 [output.html]
 additional-js = ["theme/pint.js"]
