--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ secp256k1 = { version = "0.29" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
+tracing = "0.1.40"
 
 app-utils = { path = "apps/utils" }
 essential-deploy-contract = { path = "crates/essential-deploy-contract" }
