--- a/crates/essential-read/Cargo.toml
+++ b/crates/essential-read/Cargo.toml
@@ -9,3 +9,7 @@ anyhow = { workspace = true }
 essential-types = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+tracing = { workspace = true, optional = true }
+
+[features]
+tracing = ["dep:tracing"]
