--- a/apps/nft/front_end/Cargo.toml
+++ b/apps/nft/front_end/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-app-utils = { workspace = true }
+essential-app-utils = { workspace = true }
 clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
@@ -19,5 +19,5 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
-app-utils = { workspace = true, features = ["test-utils"] }
+essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-wallet = { workspace = true, features = ["test-utils"]}
