--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = { workspace = true }
-app-utils = { workspace = true }
+essential-app-utils = { workspace = true }
 clap = { workspace = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
@@ -24,5 +24,5 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
-app-utils = { workspace = true, features = ["test-utils"] }
+essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-wallet = { workspace = true, features = ["test-utils"] }
