--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -15,6 +15,7 @@ essential-types = { workspace = true }
 hex = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+toml.workspace = true
 
 essential-debugger = { workspace = true, optional = true }
 
