fix: change app-utiles to essential-app-utils (#47)
* fix: change app-utiles to essential-app-utils

* fix: compile pint project

--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
+clap.workspace = true
+essential-app-utils.workspace = true
 essential-deploy-contract.workspace = true
 essential-hash.workspace = true
 essential-rest-client.workspace = true
@@ -13,5 +15,5 @@ serde_json.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
-app-utils = { workspace = true, features = ["test-utils"] }
+essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-wallet = { workspace = true, features = ["test-utils"] }
