--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ secp256k1 = { version = "0.29" }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.36.0", features = ["full"] }
+toml = "0.8.14"
 tracing = "0.1.40"
 
-app-utils = { path = "apps/utils" }
+essential-app-utils = { path = "apps/utils" }
 essential-deploy-contract = { path = "crates/essential-deploy-contract" }
 essential-read = { path = "crates/essential-read" }
 essential-rest-client = { path = "crates/essential-rest-client" }
