--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "app-utils"
+name = "essential-app-utils"
 version = "0.1.0"
 
 [dependencies]
@@ -15,6 +15,7 @@ essential-types = { workspace = true }
 hex = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+toml.workspace = true
 
 essential-debugger = { workspace = true, optional = true }
 
