feat: add readmes and licenses

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,14 @@ members = [
 ]
 resolver = "2"
 
+[workspace.package]
+edition = "2021"
+authors = ["Essential Contributions <contact@essentialcontributions.com>"]
+homepage = "https://essential.builders/"
+license = "Apache-2.0"
+repository = "https://github.com/essential-contributions/essential-integration"
+
+
 [workspace.dependencies]
 anyhow = "1.0.80"
 base64 = "0.22.0"
