--- a/crates/essential-read/Cargo.toml
+++ b/crates/essential-read/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "essential-read"
 version = "0.1.0"
-edition = "2021"
-publish = false
+description = "Utility crate for reading contracts and solutions from disk"
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
