--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-edition = "2021"
 name = "essential-app-utils"
+description = "Utilities for building Essential applications"
 version = "0.1.0"
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
