--- a/crates/essential-deploy-contract/Cargo.toml
+++ b/crates/essential-deploy-contract/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "essential-deploy-contract"
 version = "0.1.0"
-edition = "2021"
+description = "Cli and library for deploying contracts to the Essential protocol"
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 anyhow.workspace = true
