--- a/crates/essential-dry-run/Cargo.toml
+++ b/crates/essential-dry-run/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "essential-dry-run"
 version = "0.1.0"
-edition = "2021"
+description = "Cli and library for dry running solutions against a running essential-server"
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
