--- a/crates/essential-rest-client/Cargo.toml
+++ b/crates/essential-rest-client/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-edition = "2021"
 name = "essential-rest-client"
+description = "Client for interacting with the Essential Server"
 version = "0.1.0"
+edition.workspace = true
+authors.workspace = true
+homepage.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
