--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ essential-sign = "0.1.0"
 essential-signer = "0.1.0"
 essential-types = "0.1.0"
 essential-wallet = "0.1.0"
+pint-abi = "0.1.0"
 hex = "0.4.3"
 reqwest = "0.12.4"
 rpassword = "7.3.1"
