--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -20,6 +20,7 @@ essential-signer = { workspace = true }
 essential-types = { workspace = true }
 essential-wallet = { workspace = true }
 hex = { workspace = true }
+pint-abi = { workspace = true }
 rpassword = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
