refactor: Use pint-abi crate in nft and token app front-end (#49)
* refactor: Use pint-abi crate in nft app front-end (WIP)

* fix: Add missing signature, pk conversions

* update lock

* add in nix pint proj command

* spelling error

* pint abi error

* feat: use abi-gen for token

* feat: refactor contracts

* fix: pin git dep

* fix: pr suggestions

* feat: add recursive pint compiling and compile-all-contracts command

---------

Co-authored-by: Tom <tomrgowan@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,9 @@ jobs:
         include:
           # Add each app's test command here, each with a unique port.
           - command: nix run .#test-app-counter -- 44001
-          - command: nix develop .#essential-rust-app-dev --command cargo test
+          - command: |
+              nix run .#compile-all-contracts
+              nix develop .#essential-rust-app-dev --command cargo test
     runs-on: ubuntu-latest
     permissions:
       id-token: "write"
