fix: remove nix from check, clippy, fmt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,6 @@ jobs:
 
   cargo:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: "write" # added for magic-nix-cache-action
-      contents: "read"  # added for magic-nix-cache-action
     strategy:
       fail-fast: false
       matrix:
@@ -57,12 +54,11 @@ jobs:
           - command: fmt --all -- --check
     steps:
     - uses: actions/checkout@v3
-    - uses: DeterminateSystems/nix-installer-action@v10
-    - uses: DeterminateSystems/magic-nix-cache-action@v4
+    - uses: dtolnay/rust-toolchain@stable
+      with:
+        components: clippy, rustfmt
     - uses: Swatinem/rust-cache@v2
-    - env:
-        TMPDIR: ${{ runner.temp }}
-      run: nix develop .#essential-rust-app-dev --command cargo ${{ matrix.command }}
+    - run: cargo ${{ matrix.command }}
 
   # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
   # so that it can be merged in the command table above
