--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,23 +43,6 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: nix ${{ matrix.command }}
 
-  cargo:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - command: check --locked --all
-          - command: clippy --locked --all -- -D warnings
-          - command: fmt --all -- --check
-    steps:
-    - uses: actions/checkout@v3
-    - uses: dtolnay/rust-toolchain@stable
-      with:
-        components: clippy, rustfmt
-    - uses: Swatinem/rust-cache@v2
-    - run: cargo ${{ matrix.command }}
-
   # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
   # so that it can be merged in the command table above
   cargo-toml-lint:
@@ -83,6 +66,9 @@ jobs:
           - command: nix run .#test-app-counter -- 44001
           - command: |
               nix run .#compile-all-contracts
+              nix develop .#essential-rust-app-dev --command cargo check --locked --all
+              nix develop .#essential-rust-app-dev --command cargo clippy --locked --all -- -D warnings
+              nix develop .#essential-rust-app-dev --command cargo fmt --all -- --check
               nix develop .#essential-rust-app-dev --command cargo test
     runs-on: ubuntu-latest
     permissions:
