--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,17 +43,17 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: nix ${{ matrix.command }}
 
-  # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
-  # so that it can be merged in the command table above
-  cargo-toml-lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - run: cargo install --version "0.1.1" cargo-toml-lint
-    - run: git ls-files | grep Cargo.toml$ | xargs --verbose -n 1 cargo-toml-lint
+  # # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
+  # # so that it can be merged in the command table above
+  # cargo-toml-lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: actions-rs/toolchain@v1
+  #     with:
+  #       toolchain: stable
+  #   - run: cargo install --version "0.1.1" cargo-toml-lint
+  #   - run: git ls-files | grep Cargo.toml$ | xargs --verbose -n 1 cargo-toml-lint
 
   # Test the apps.
   apps:
