--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: DeterminateSystems/nix-installer-action@v10
-    # - uses: DeterminateSystems/magic-nix-cache-action@v4
+    - uses: DeterminateSystems/magic-nix-cache-action@v4
     - run: nix fmt -- --check ./
 
   # Check the devShell works on macOS and Linux.
@@ -40,20 +40,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@v10
-      # - uses: DeterminateSystems/magic-nix-cache-action@v4
+      - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: nix ${{ matrix.command }}
 
-  # # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
-  # # so that it can be merged in the command table above
-  # cargo-toml-lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions-rs/toolchain@v1
-  #     with:
-  #       toolchain: stable
-  #   - run: cargo install --version "0.1.1" cargo-toml-lint
-  #   - run: git ls-files | grep Cargo.toml$ | xargs --verbose -n 1 cargo-toml-lint
+  # TODO: Update/fork this tool to provide a simpler, cargo-plugin-style CLI
+  # so that it can be merged in the command table above
+  cargo-toml-lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: DeterminateSystems/nix-installer-action@v10
+    - uses: DeterminateSystems/magic-nix-cache-action@v4
+    - run: nix shell nixpkgs#cargo-toml-lint --command git ls-files | grep Cargo.toml$ | xargs --verbose -n 1 cargo-toml-lint
 
   # Test the apps.
   apps:
@@ -65,15 +63,7 @@ jobs:
           - command: nix run .#test-app-counter -- 44001
           - command: |
               nix run .#compile-all-contracts
-              ls
-              which rustc
-              which cargo
-              rustc --version
-              cargo --version
-              nix develop .#essential-rust-app-dev --command ls && which rustc && which cargo && rustc --version && cargo --version
-              nix develop .#essential-rust-app-dev --command cargo check --locked --all
-              nix develop .#essential-rust-app-dev --command cargo clippy --locked --all -- -D warnings
-              nix develop .#essential-rust-app-dev --command cargo fmt --all -- --check
+              nix develop .#essential-rust-app-dev --command cargo check --locked --all && cargo clippy --locked --all -- -D warnings && cargo fmt --all -- --check
               nix develop .#essential-rust-app-dev --command cargo test
     runs-on: ubuntu-latest
     permissions:
@@ -82,5 +72,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@v10
-      # - uses: DeterminateSystems/magic-nix-cache-action@v4
+      - uses: DeterminateSystems/magic-nix-cache-action@v4
       - run: ${{ matrix.command }}
