feat: add token to book

--- a/docs/getting-started/book.toml
+++ b/docs/getting-started/book.toml
@@ -7,3 +7,6 @@ title = "Getting Started with Essential Applications"
 
 [output.html]
 additional-js = ["theme/pint.js"]
+
+[build]
+extra-watch-dirs = ["../code"]
