--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,18 +86,16 @@ jobs:
       ]
     steps:
       - uses: actions/checkout@v3
-      - uses: DeterminateSystems/nix-installer-action@v10
-      - uses: DeterminateSystems/magic-nix-cache-action@v4
-      - run: nix develop
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
       - uses: katyo/publish-crates@v2
         id: publish-crates
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
           dry-run: ${{ github.event_name != 'push' }}
           ignore-unpublished-changes: true
-      - run: which cargo
-      - name: if my-crate published
-        if: fromJSON(steps.publish-crates.outputs.published).*
+      - name: List published crates
+        if: ${{ steps.publish-crates.outputs.published != '' }}
         run: |
           LIST="${{ join(fromJSON(steps.publish-crates.outputs.published).*.name, ', ') }}"
           echo "Published crates: $LIST"
