--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,27 +19,26 @@ repository = "https://github.com/essential-contributions/essential-integration"
 [workspace.dependencies]
 anyhow = "1.0.80"
 base64 = "0.22.0"
-clap = { version = "4.5.4", features = ["derive"] }
-essential-debugger = "0.1.0"
-essential-hash = "0.1.0"
-essential-server-types = "0.1.0"
-essential-sign = "0.1.0"
-essential-signer = "0.1.0"
-essential-types = "0.1.0"
-essential-wallet = "0.1.0"
-# pint-abi = "0.1.0"
-pint-abi = { git = "https://github.com/essential-contributions/pint"  }
+clap = { version = "4.5.16", features = ["derive"] }
+essential-debugger = "0.2.0"
+essential-hash = "0.2.0"
+essential-server-types = "0.2.0"
+essential-sign = "0.2.0"
+essential-signer = "0.2.0"
+essential-types = "0.2.0"
+essential-wallet = "0.2.0"
+pint-abi = "0.2.0"
 hex = "0.4.3"
-reqwest = "0.12.4"
+reqwest = "0.12.7"
 rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
-serde = { version = "1.0.195", features = ["derive"] }
+serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1.36.0", features = ["full"] }
-toml = "0.8.14"
+tokio = { version = "1.39.3", features = ["full"] }
+toml = "0.8.19"
 tracing = "0.1.40"
 
-essential-app-utils = { path = "apps/utils", version = "0.1.0" }
-essential-deploy-contract = { path = "crates/essential-deploy-contract", version = "0.1.0" }
-essential-read = { path = "crates/essential-read", version = "0.1.0" }
-essential-rest-client = { path = "crates/essential-rest-client", version = "0.1.0" }
+essential-app-utils = { path = "apps/utils", version = "0.2.0" }
+essential-deploy-contract = { path = "crates/essential-deploy-contract", version = "0.2.0" }
+essential-read = { path = "crates/essential-read", version = "0.2.0" }
+essential-rest-client = { path = "crates/essential-rest-client", version = "0.2.0" }
