--- a/crates/essential-deploy-contract/Cargo.toml
+++ b/crates/essential-deploy-contract/Cargo.toml
@@ -13,7 +13,7 @@ anyhow.workspace = true
 clap.workspace = true
 essential-read.workspace = true
 essential-rest-client.workspace = true
-essential-types.workspace = true
+essential-types = "0.3.0"
 essential-wallet.workspace = true
 rpassword.workspace = true
 serde_json.workspace = true
