--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -17,7 +17,7 @@ essential-rest-client = { workspace = true, optional = true }
 essential-server-types = { workspace = true }
 essential-sign = { workspace = true }
 essential-signer = { workspace = true }
-essential-types = { workspace = true }
+essential-types = "0.3.0"
 hex = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
