--- a/crates/essential-rest-client/Cargo.toml
+++ b/crates/essential-rest-client/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = { workspace = true }
 base64 = { workspace = true }
 clap = { workspace = true }
 essential-server-types = { workspace = true }
-essential-types = { workspace = true }
+essential-types = "0.3.0"
 hex.workspace = true
 reqwest = { workspace = true, features = ["json", "native-tls-alpn"] }
 serde = { workspace = true }
