--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ essential-node-api = "0.3.0"
 essential-node = "0.3.0"
 essential-node-types = "0.1.0"
 essential-sign = "0.4.0"
+essential-signer = "0.3.0"
 essential-types = "0.3.0"
 essential-wallet = "0.3.0"
 pint-abi = "0.3.0"
