--- a/docs/getting-started/book.toml
+++ b/docs/getting-started/book.toml
@@ -7,3 +7,6 @@ title = "Getting Started with Essential Applications"
 
 [output.html]
 additional-js = ["theme/pint.js"]
+
+[output.html.fold]
+enable = true
