Counter integration test (#104)
* chore: update nix flake - essential-builder essential-node

* chore: update contract config

* chore: revert changes to config

* test: setup initial test structure

* test: implemented new integration test

* test: add one more increment and read

* test: update tests

* fix: use correct args for new rest client (v0.5.0)

* chore: cleanup

* fix: revert this unintended change

* chore: cleanup code

* chore: cleanup unused imports

* fix: add sleep to ensure contract build

* fix: add essential-rest-client to essential-minimal.nix

* cleanup: address feedback from PR review

---------

Co-authored-by: Tom <tomrgowan@gmail.com>

--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -18,3 +18,4 @@ essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-builder.workspace = true
 essential-builder-db.workspace = true
 essential-node.workspace = true
+regex = "1.11.1"
