--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -19,3 +19,4 @@ essential-builder.workspace = true
 essential-builder-db.workspace = true
 essential-node.workspace = true
 regex = "1.11.1"
+tracing-subscriber.workspace = true
